admin sidebar active bo'lgandagi style+, 10 ta sahifa+, kichik kamchiliklar tuzatildi

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
 #header .active {
     color: dodgerblue;
 }
+
+#admin-sidebar .active {
+    background-color: rgb(48, 151, 255);
+    border-radius: 5px;
+}
